fdo#41524: CUPS printing: use "collate" option when PDF is available

Assume that the CUPS printer is able to handle collating by itself,
don't send multiple print jobs (except if user clicks on "Create single
print jobs for collated output" of course...).

To enable collating with PDF based printers, add the "collate" option;
legacy PS based printers still get the weird stuff read from the PPD
(not sure what the risks of changing that are).

Change-Id: Ia12dc69f9083bba94f2ed633ecbd153aac7e40ab
(cherry picked from commit c76cd71fe9bdefaef3f33f8ca193c32e3ab112ed)
Reviewed-on: https://gerrit.libreoffice.org/8116
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 138f41fd408b120d52e3d6c185940ace065512af)
Reviewed-on: https://gerrit.libreoffice.org/8158
Reviewed-by: Norbert Thiebaud <nthiebaud@gmail.com>
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>